--- a/translations/en.json
+++ b/translations/en.json
@@ -3,6 +3,7 @@
     "header": "Species nearby",
     "internet_error": "We need the Internet to generate nearby species. Tap to try again.",
     "no_location": "No Location",
+    "no_gps": "No GPS signal found. Please double check that you have GPS turned on",
     "no_species": "Looks like there haven’t been many species observed nearby! Try changing your location or broadening the species filter.",
     "input_location_above_map": "No location found; input a location name above to load the map and search for species nearby",
     "error_alert_location_services": "To continue, turn on location services in your device settings",
