--- a/translations/en.json
+++ b/translations/en.json
@@ -143,7 +143,8 @@
     "reset": "Reset my password",
     "check_email": "Check your email!",
     "reset_instructions": "We sent password reset instructions to your email.",
-    "return_login": "Return to Login"
+    "return_login": "Return to Login",
+    "authentication_failed": "Authentication failed"
   },
   "privacy": {
     "header": "Privacy Policy"
